--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World! Welcome to my website
+<html>
+    <head>My Portofolio</head>
+    <body>
+        <h3>Badut mah badut aja sia degol hahahahhah</h3>
+    </body>
+</html>
