--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
+
     <head>My Portofolio</head>
     <body>
         <h3>Badut mah badut aja sia degol hahahahhah</h3>
