--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
 
-    <head>My Portofolio</head>
+    <head>
+        <title>My Portofolio</title>
+    </head>
     <body>
         <h3>Badut mah badut aja sia degol hahahahhah</h3>
     </body>
