--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Yosafat Hermawam Suryana</h3>
+      <h3>Yosafat Hermawan Suryana</h3>
       <p>Mobile & Web Developer</p>
       <div class="social-links">
         <a href="https://twitter.com/SuryanaYosafat" class="twitter"><i class="bx bxl-twitter"></i></a>
