--- a/index.html
+++ b/index.html
@@ -175,8 +175,6 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>Here are some of the skills that I have both in programming languages ​​and frameworks</p>
-          <br>
-          <p>Need my resume ? <a href="assets/img/resume.pdf" download> download</p>
         </div>
 
         <div class="row skills-content">
@@ -278,6 +276,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>Here is a summary of my education and work experience</p>
+          <p>Need my resume ?</p> <a href="assets/img/resume.pdf" download> download </a>
         </div>
 
         <div class="row">
