--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>Here is a summary of my education and work experience</p>
-          <p>Need my resume ?</p> <a href="assets/img/resume.pdf" download>download</a>
+          <p>Need my resume ? <a href="assets/img/resume.pdf" download>download</a> </p>
         </div>
 
         <div class="row">
